# essay-scoring-2

./: .gitignore  README.md  download_datasets.py  essay_eda.ipynb  main.py  pyproject.toml  transformer.ipynb
code/: data.py  dataset.py  engine.py  features.py  metrics.py  models.py  predict.py  train.py
conf/: config.yaml
kaggle_package/: single_cell_bert_submission.py
outputs/2026-06-24/11-29-48/.hydra/: hydra.yaml
outputs/2026-06-24/11-31-50/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-06-24/11-32-26/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-24/11-33-35/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-24/11-36-50/.hydra/: hydra.yaml
outputs/2026-06-24/11-44-40/.hydra/: config.yaml  hydra.yaml
submission/: aes2_submission.ipynb  aes2_submission.py
