[project]
name = "essay-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hydra-core>=1.3.3",
    "kagglehub>=1.0.2",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "protobuf>=6.31.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]

 [tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
